node-main/deps/v8/test/message/fail/class-fields-private-source-positions.out
*%(basename)s:9: TypeError: Cannot read private member #a from an object whose class did not declare it
    [o.#a](){}
       ^
TypeError: Cannot read private member #a from an object whose class did not declare it
    at *%(basename)s:9:8
